style.css
:root{
    --game-height: 457.6px
}

*{
    font-family: sans-serif;
}

header{
    position: fixed;
    top: 0;
    left: 0;
    padding: 20px 60px;
    background-color: #111;
    color: whitesmoke;
    width: 100vw;
    font-size: 33px;
    display: flex;
    align-items: center;
    z-index: 100;
}
header svg{
    width: 41px;
    fill: whitesmoke;
    margin-left: 10px;
}
#heading-buttons{
    display: flex;
    align-content: center;
    justify-content: space-around;
    position: absolute;
    left: calc(50vw - 165px);
    width: 330px;
}
#heading-buttons button{
    padding: 10px 20px;
    background-color: #333;
    color: whitesmoke;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 20px;
    transition: 0.5s;
}
#heading-buttons button:hover{
    background-color: #555;
}
#heading-buttons button:active{
    background-color: #777;
}
.selected{
    background-color: #777 !important;
    
}
main{
    padding: 15px 40px 0px;
    background-color: rgb(119, 119, 119);
}

#page1{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

body{
    text-align: center;
    margin: 80px 40px 0px;
    /* background-color: #333; */
    background-color: rgb(119, 119, 119);
    height: -webkit-fill-available;
    overflow: auto;
}

html{
    scroll-behavior: smooth;
    background-color: #333;
    height: 100%;
    overflow: auto;
}

section.game{
    background-color: black;
    width: fit-content;
    padding: 30px;
    border-radius: 10%;
    color: whitesmoke;
    padding-bottom: 12px;
}

section.player-info{
    height: var(--game-height);
    width: 225px;
}

#basic-info{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 15px;
}

#basic-info svg{
    width: 75px;
    fill: whitesmoke;
    height: min-content;
}
#basic-info img{
    width: 75px;
    height: min-content;
}

#basic-info input{
    height: 30px;
    /* It has to not appear as input */
    background-color: transparent;
    border: none;
    color: whitesmoke;
    font-size: 30px;
    max-width: 50%;
    
}
#basic-info input:focus{
    outline: none;
}

.na-tahu{
    background-color: #05008a;
    color: whitesmoke;
    padding: 2px 0;
    text-align: center
}
.na-tahu.no{
    opacity: 0.4;
}

#piece-gain h4{
    margin-left: 12px;
    margin-bottom: 5px;
}

#piece-gain li{
    list-style-type: none;
    margin-top: 5px;
}
.cb-tools{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#protocol-line{
    margin: 0;
    text-align: center;
}

.cb-tools button{
    padding: 2px 3px 0;
    background-color: #444;
    color: whitesmoke;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 18px;
    transition: 0.2s;
}

.cb-tools button:hover{
    background-color: #666;
}

.pgn-fen {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 10px;
}
.pgn-fen button{
    background-color: transparent;
    outline: none;
    border: none;
    color: whitesmoke;
}
.pgn-fen button:hover{
    color: #666;
    cursor: pointer;
}

#heading-buttons a{
    color: whitesmoke;
    text-decoration: none;
    outline: none;
}
a{
    outline: none;
}

/* homepage */
#page2{
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

